# bw-linux-biometrics-bridge

./: Cargo.toml  README.md
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs
crates/native-host/: Cargo.toml
crates/native-host/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
docs/: ARCHITECTURE.md  INSTALL.md
packaging/native-messaging/: com.8bit.bitwarden.chrome.json.template  com.8bit.bitwarden.firefox.json.template
packaging/polkit/: com.bitwarden.Bitwarden.unlock.policy
packaging/systemd/user/: bw-daemond.service
scripts/: install-linux.sh
