[workspace]
members = [
  "crates/protocol",
  "crates/daemon",
  "crates/native-host",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "GPL-3.0-only"
publish = false

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rsa = { version = "0.9", features = ["sha1", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
cbc = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
protocol = { path = "crates/protocol" }
