[package]
name = "bw-native-host"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "bw-native-host"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
protocol.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
